[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Scott Hellman <scott@scutellaris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
regex = "1"
itertools = "0.8.2"

[dev-dependencies]
proptest = "0.6.0"
